data/derived/sp14/progs/unify/prog4594.ml.out
Characters 48-57:
  let fixpoint (f,b) = wwhile ((let (x,y)= f b in (x, x<>b)),b);;
                                                  ^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
